Fix status indicator position on small screens
The service name would not shrink when it wrapped to a new line

This caused a large gap between the name and the indicator, causing issues on small screens

--- a/styles.css
+++ b/styles.css
@@ -113,16 +113,6 @@ a:hover {
     box-shadow: 0rem 0rem .5rem 0.2rem rgba(255, 255, 255, 0.1);
 }
 
-.service-name {
-    color: var(--text-color);
-    margin: 0;
-}
-
-.service-link {
-    color: inherit;
-    text-decoration: none;
-}
-
 .service-card-header {
     display: flex;
     justify-content: space-between;
@@ -133,7 +123,17 @@ a:hover {
     display: flex;
     align-items: center;
     gap: 0.75rem;
+}
+
+.service-name {
+    color: var(--text-color);
     margin: 0;
+    flex: 0;
+}
+
+.service-link {
+    color: inherit;
+    text-decoration: none;
 }
 
 .status-indicator {
